# Homework

./: CMakeLists.txt  Car.cpp  Car.h  Home.cpp  Home.h  HomePolicy.cpp  HomePolicy.h  LinkedList.h  ObligatorilyPolicy.cpp  ObligatorilyPolicy.h  OsagoPolicy.cpp  OsagoPolicy.h  Passport.cpp  Passport.h  Policy.cpp  Policy.h  main.cpp  task3.cpp  task3.h
jni/: main.cpp  task3.cpp  task3.h
