cmake_minimum_required(VERSION 3.12)
project(Homework)

set(CMAKE_CXX_STANDARD 14)

add_executable(Homework main.cpp task3.cpp task3.h Passport.cpp Passport.h Car.cpp Car.h Home.cpp Home.h Policy.cpp Policy.h ObligatorilyPolicy.cpp ObligatorilyPolicy.h OsagoPolicy.cpp OsagoPolicy.h HomePolicy.cpp HomePolicy.h)